<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/qn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qn1"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/qn1_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:inputType="textCapWords"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/qn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qn2"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"/>
    <RadioGroup
        android:id="@id/qn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/qn2_answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qn2_answer1"
            android:checked="false"/>
        <RadioButton
            android:id="@+id/qn2_answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qn2_answer2"
            android:checked="false"/>
        <RadioButton
            android:id="@+id/qn2_answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qn2_answer3"
            android:checked="false"/>

    </RadioGroup>
    <TextView
        android:id="@+id/qn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qn3"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"/>
    <CheckBox
        android:id="@+id/qn3_answer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qn3_answer1"/>
    <CheckBox
        android:id="@+id/qn3_answer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qn3_answer2"/>
    <CheckBox
        android:id="@+id/qn3_answer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qn3_answer3"/>
    <CheckBox
        android:id="@+id/qn3_answer4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qn3_answer4"/>

    <TextView
        android:id="@+id/qn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qn4"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"/>
    <RadioGroup
        android:id="@id/qn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <RadioButton
        android:id="@+id/qn4_answer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qn4_answer1"
        android:checked="false"/>
    <RadioButton
        android:id="@+id/qn4_answer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qn4_answer2"
        android:checked="false"/>
    </RadioGroup>

    <TextView
        android:id="@+id/qn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qn5"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"/>
    <CheckBox
        android:id="@+id/qn5_answer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qn5_answer1"/>
    <CheckBox
        android:id="@+id/qn5_answer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qn5_answer2"/>
    <CheckBox
        android:id="@+id/qn5_answer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qn5_answer3"/>
    <CheckBox
        android:id="@+id/qn5_answer4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qn5_answer4"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:layout_marginTop="16dp"
        android:onClick="submitAnswers"
        android:layout_gravity="center"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset"
        android:layout_marginTop="16dp"
        android:onClick="reset"
        android:layout_gravity="center"/>
</LinearLayout>
</ScrollView>